Fix ref to lavish-bootstrap

--- a/_config.yml
+++ b/_config.yml
@@ -118,4 +118,4 @@ sidebars:
 # the description is used in the feed.xml file
 
 # needed for sitemap.xml file only
-url: https://crandmck.github.io/loopback.io/
+url: https://crandmck.github.io/loopback.io
